--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <defs><style>.cls-1{fill:#4f46f9;}</style></defs>
       <path class="cls-1" d="M0 0v272a4235.13 4235.13 0 0 1 1000 0v-275z" id="header">
     </svg>
-    <a href="#" class="nav-logo"><img src="https://s6110146.scm.tees.ac.uk/HAD_18/MyQuest/assets/myquest-logo.png" height="100px"></a>
+    <a href="#" class="nav-logo"><img src="assets/myquest-logo-large.png" height="100px"></a>
   </nav>
   <div class="contentRoot"></div>
 
