--- a/partialViews/homeScreen.html
+++ b/partialViews/homeScreen.html
@@ -5,8 +5,9 @@
         <h2>The Orientation App</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <button class="content-button waves-effect waves-light z-depth-3 startGame" type="submit" name="action">Get Started<i class="mdi-content-send right"></i>
-      </button>
+        <button class="buttons-2 waves-effect waves-light loginPage" type="submit" name="action">Account</button>
+
+        <button class="buttons-2 waves-effect waves-light startGame" type="submit" name="action">Play</button>
       <!--close col-->
     </div>
     <!--close content row-->
