--- a/partialViews/loginScreen.html
+++ b/partialViews/loginScreen.html
@@ -16,6 +16,7 @@
   </div>
   <div class="externalBtns">
     <img id="btnGoogle" src="assets/google.png" />
+    <img id="btnFacebook" src="assets/facebook.png" />
   </div>
 </div>
 
@@ -46,28 +47,53 @@ btnSignup.addEventListener('click', e=> {
 btnLogout.addEventListener('click', e => {
   firebase.auth().signOut();
 })
+
+
 //Google Login
-var provider = new firebase.auth.GoogleAuthProvider();
-btnGoogle.addEventListener('click', e => {
-  firebase.auth().signInWithPopup(provider).then(function(result) {
-    // This gives you a Google Access Token. You can use it to access the Google API.
-    var token = result.credential.accessToken;
-    // The signed-in user info.
-    var user = result.user;
-    // ...
-  }).catch(function(error) {
-    // Handle Errors here.
-    var errorCode = error.code;
-    var errorMessage = error.message;
-    // The email of the user's account used.
-    var email = error.email;
-    // The firebase.auth.AuthCredential type that was used.
-    var credential = error.credential;
-    // ...
-  });
+// var provider = new firebase.auth.GoogleAuthProvider();
+// btnGoogle.addEventListener('click', e => {
+//   firebase.auth().signInWithPopup(provider).then(function(result) {
+//     // This gives you a Google Access Token. You can use it to access the Google API.
+//     var token = result.credential.accessToken;
+//     // The signed-in user info.
+//     var user = result.user;
+//     // ...
+//   }).catch(function(error) {
+//     // Handle Errors here.
+//     var errorCode = error.code;
+//     var errorMessage = error.message;
+//     // The email of the user's account used.
+//     var email = error.email;
+//     // The firebase.auth.AuthCredential type that was used.
+//     var credential = error.credential;
+//     // ...
+//   });
+// });
+var googProvider = new firebase.auth.GoogleAuthProvider();
+var fbProvider = new firebase.auth.FacebookAuthProvider();
+
+btnGoogle.addEventListener('click', e => extLogin(googProvider))
+btnFacebook.addEventListener('click', e => extLogin(fbProvider))
+//Facebook Login
+
+function extLogin(provider) {
+firebase.auth().signInWithPopup(provider).then(function(result) {
+  // This gives you a Facebook Access Token. You can use it to access the Facebook API.
+  var token = result.credential.accessToken;
+  // The signed-in user info.
+  var user = result.user;
+  // ...
+}).catch(function(error) {
+  // Handle Errors here.
+  var errorCode = error.code;
+  var errorMessage = error.message;
+  // The email of the user's account used.
+  var email = error.email;
+  // The firebase.auth.AuthCredential type that was used.
+  var credential = error.credential;
+  // ...
 });
-
-
+};
 
 
 
