--- a/partialViews/loginScreen.html
+++ b/partialViews/loginScreen.html
@@ -15,8 +15,11 @@
     <button class="logout hide" id="logout">Logout</button>
   </div>
   <div class="externalBtns">
-    <img id="btnGoogle" src="assets/google.png" />
-    <img id="btnFacebook" src="assets/facebook.png" />
+    <h3>Or Login via <br/>Google | Facebook | Twitter | Github</h3>
+    <img class="loginHandler" id="btnGoogle" src="assets/googleBtn.png" />
+    <img class="loginHandler" id="btnFacebook" src="assets/facebookBtn.png" />
+    <img class="loginHandler" id="btnTwitter" src="assets/twitterBtn.png" />
+    <img class="loginHandler" id="btnGithub" src="assets/githubBtn.png" />
   </div>
 </div>
 
@@ -48,44 +51,45 @@ btnLogout.addEventListener('click', e => {
   firebase.auth().signOut();
 })
 
-
-//Google Login
-// var provider = new firebase.auth.GoogleAuthProvider();
-// btnGoogle.addEventListener('click', e => {
-//   firebase.auth().signInWithPopup(provider).then(function(result) {
-//     // This gives you a Google Access Token. You can use it to access the Google API.
-//     var token = result.credential.accessToken;
-//     // The signed-in user info.
-//     var user = result.user;
-//     // ...
-//   }).catch(function(error) {
-//     // Handle Errors here.
-//     var errorCode = error.code;
-//     var errorMessage = error.message;
-//     // The email of the user's account used.
-//     var email = error.email;
-//     // The firebase.auth.AuthCredential type that was used.
-//     var credential = error.credential;
-//     // ...
-//   });
-// });
 var googProvider = new firebase.auth.GoogleAuthProvider();
 var fbProvider = new firebase.auth.FacebookAuthProvider();
+var twitProvider = new firebase.auth.TwitterAuthProvider();
+var gitProvider = new firebase.auth.GithubAuthProvider();
 
 btnGoogle.addEventListener('click', e => extLogin(googProvider))
 btnFacebook.addEventListener('click', e => extLogin(fbProvider))
+btnTwitter.addEventListener('click', e => extLogin(twitProvider))
+btnGithub.addEventListener('click', e => extLogin(gitProvider))
 //Facebook Login
 
 function extLogin(provider) {
-firebase.auth().signInWithPopup(provider).then(function(result) {
-  // This gives you a Facebook Access Token. You can use it to access the Facebook API.
-  var token = result.credential.accessToken;
+  // firebase.auth().signInWithPopup(provider).then(function(result) {
+  //   // This gives you a Access Token
+  //   var token = result.credential.accessToken;
+  //   // The signed-in user info.
+  //   var user = result.user;
+  // }).catch(function(error) {
+  //   // Handle Errors here.
+  //   var errorCode = error.code;
+  //   var errorMessage = error.message;
+  //   // The email of the user's account used.
+  //   var email = error.email;
+  //   // The firebase.auth.AuthCredential type that was used.
+  //   var credential = error.credential;
+  //   // ...
+  // });
+  firebase.auth().signInWithRedirect(provider);
+  firebase.auth().getRedirectResult().then(function(result) {
+  if (result.credential) {
+    // This gives you an Access Token.
+    var token = result.credential.accessToken;
+  }
   // The signed-in user info.
   var user = result.user;
-  // ...
 }).catch(function(error) {
   // Handle Errors here.
   var errorCode = error.code;
+  console.log(errorCode);
   var errorMessage = error.message;
   // The email of the user's account used.
   var email = error.email;
@@ -111,8 +115,5 @@ firebase.auth().onAuthStateChanged(firebaseUser => {
     btnLogout.classList.add('hide');
   }
 });
-
-
-
 
 </script>
