--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
   <title>MyQuest</title>
-
+  <link rel="shortcut icon" href="https://s6110146.scm.tees.ac.uk/HAD_18/MyQuest/assets/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="https://s6110146.scm.tees.ac.uk/HAD_18/MyQuest/assets/favicon.ico" type="image/x-icon">
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
@@ -31,9 +32,8 @@
       </svg>
       <a href="#" class="nav-logo homePage"><img src="assets/myquest-logo.png" height="100px"></a>
     </nav>
+
     <div class="contentRoot"></div>
-
-
 
 
     <!--  Scripts-->
