--- a/partialViews/homeScreen.html
+++ b/partialViews/homeScreen.html
@@ -13,3 +13,18 @@
     <!--close content row-->
   </div>
   <!--close section-->
+
+  <!-- <script>
+  firebase.auth().getRedirectResult().then(result => {
+  var user = result.user;
+  if (result.credential) {
+    // This gives you an Access Token.
+    var token = result.credential.accessToken;
+  }
+  // The signed-in user info.
+  if (result.user) {
+    console.log("Beep")
+    changeAppPage('accountScreen');
+  }
+});
+  </script> -->
