--- a/partialViews/loginScreen.html
+++ b/partialViews/loginScreen.html
@@ -63,29 +63,19 @@ btnGithub.addEventListener('click', e => extLogin(gitProvider))
 //Facebook Login
 
 function extLogin(provider) {
-  // firebase.auth().signInWithPopup(provider).then(function(result) {
-  //   // This gives you a Access Token
-  //   var token = result.credential.accessToken;
-  //   // The signed-in user info.
-  //   var user = result.user;
-  // }).catch(function(error) {
-  //   // Handle Errors here.
-  //   var errorCode = error.code;
-  //   var errorMessage = error.message;
-  //   // The email of the user's account used.
-  //   var email = error.email;
-  //   // The firebase.auth.AuthCredential type that was used.
-  //   var credential = error.credential;
-  //   // ...
-  // });
   firebase.auth().signInWithRedirect(provider);
-  firebase.auth().getRedirectResult().then(function(result) {
+  console.log("Pre-Beep")
+  firebase.auth().getRedirectResult().then(result => {
+  var user = result.user;
   if (result.credential) {
     // This gives you an Access Token.
     var token = result.credential.accessToken;
   }
   // The signed-in user info.
-  var user = result.user;
+  if (result.user) {
+    console.log("Beep")
+    changeAppPage('accountScreen');
+  }
 }).catch(function(error) {
   // Handle Errors here.
   var errorCode = error.code;
