--- a/partialViews/choiceScreen.html
+++ b/partialViews/choiceScreen.html
@@ -1,18 +1,25 @@
-<div class="content-box location1">
-  <div class="choice-box libraryChoice">
+<div class="content-box" id="libraryChoice">
+  <div class="choice-box">
     <div class="choice-bg" style="background: url('assets/library.jpg') no-repeat top fixed;  background-size: 1300px; border-radius: 20px;"></div>
     <h2 class="choice-label">Library</h2>
   </div>
 </div>
-<div class="content-box location2">
-  <div class="choice-box olympiaChoice">
+<div class="content-box" id="olympiaChoice">
+  <div class="choice-box">
     <div class="choice-bg" style="background: url('assets/olympia.jpg') no-repeat top fixed;  background-size: 1300px; border-radius: 20px;"></div>
     <h2 class="choice-label">Olympia Building</h2>
   </div>
 </div>
-<div class="content-box location3">
-  <div class="choice-box servicesChoice">
+<div class="content-box" id="servicesChoice">
+  <div class="choice-box">
     <div class="choice-bg" style="background: url('assets/student-services.jpg') no-repeat top fixed;  background-size: 1300px; border-radius: 20px;"></div>
     <h2 class="choice-label">Student Services</h2>
   </div>
 </div>
+
+<script>
+  document.getElementById("libraryChoice").addEventListener('click', e => { changeAppPage('libraryScreen') });
+  document.getElementById("olympiaChoice").addEventListener('click', e => { changeAppPage('olympiaScreen') });
+  document.getElementById("servicesChoice").addEventListener('click', e => { changeAppPage('servicesScreen') });
+
+</script>
