--- a/partialViews/homeScreen.html
+++ b/partialViews/homeScreen.html
@@ -6,25 +6,6 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
         <button class="buttons-2 waves-effect waves-light accountButton" type="submit" name="action">Account</button>
-
-        <button class="buttons-2 waves-effect waves-light startGame" type="submit" name="action">Play</button>
-      <!--close col-->
+        <button class="buttons-2 waves-effect waves-light startGame" type="submit" name="action">Discover</button>
     </div>
-    <!--close content row-->
   </div>
-  <!--close section-->
-
-  <!-- <script>
-  firebase.auth().getRedirectResult().then(result => {
-  var user = result.user;
-  if (result.credential) {
-    // This gives you an Access Token.
-    var token = result.credential.accessToken;
-  }
-  // The signed-in user info.
-  if (result.user) {
-    console.log("Beep")
-    changeAppPage('accountScreen');
-  }
-});
-  </script> -->
