--- a/partialViews/instructionsScreen.html
+++ b/partialViews/instructionsScreen.html
@@ -1,4 +1,3 @@
-
 <div class="section">
   <div class="row ">
     <div class="col s12">
@@ -15,17 +14,22 @@
               <p>You have been asked to complete a secret mission by Agent Blue, who is working undercover in Student and Library Services. He has left a secret message for you to uncover that will be vital for you to succeed. Complete the Quest and uncover the clues to find the message. </p>
               <br /><br />
               <!--custom video player style-->
-              <video poster="img/poster.png" id="videoPlayer" class="responsive-video" playsinline controls preload="metadata">
+              <video poster="https://libquest.tees.ac.uk/img/poster.png" id="videoPlayer" class="responsive-video" playsinline controls preload="metadata">
                 <source id="videoSource" src="https://libquest.tees.ac.uk/video/agentBlue.mp4" type="video/mp4" style="background-color:#ccff55;" />
               </video>
               <p><a href="Agent_Blue_Briefing.pdf" target="_blank">Download Video Script PDF</a></p>
-              <br><br><p>In order to complete the quest, you will need to read a clue, then find the location around the campus.
+              <br><p>In order to complete the quest, you will need to read a clue, then find the location around the campus.
                 You will know you have found the clue, as there will be a QR code. Scan the QR code for the next clue!</p>
               </div>
             </div>
           </div>
-          <button class="buttons-2 waves-effect waves-light choicePage" type="submit" name="action">Pick a Location</button>
+          <button class="buttons waves-effect waves-light center-align" id="startMission" type="submit" name="action">Mission Start!</button>
         </div>
       </div>
-
     </div>
+  </div>
+</div>
+
+<script>
+  document.getElementById("startMission").addEventListener('click', e => { changeAppPage('scoreScreen') });
+</script>
