--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!--Manifest Document-->
+  <link rel="manifest" href="manifest.json">
   <!-- add jQuery core as a file, not a CDN  -->
   <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
@@ -32,18 +34,6 @@
       </svg>
       <a href="#" class="nav-logo homePage"><img src="assets/myquest-logo.png" height="100px"></a>
     </nav>
-
-    <!-- <div class="preloader-wrapper big active">
-      <div class="spinner-layer spinner-blue">
-        <div class="circle-clipper left">
-          <div class="circle"></div>
-        </div><div class="gap-patch">
-          <div class="circle"></div>
-        </div><div class="circle-clipper right">
-          <div class="circle"></div>
-        </div>
-      </div> -->
-
 
     <div class="contentRoot">
       <div class="preload preloader-wrapper big active">
@@ -74,6 +64,27 @@
     };
     firebase.initializeApp(config);
     </script>
+    <!-- Progressive Web App -->
+    <script>
+    /*Add to the bottom of your index.html file*/
+            if ('serviceWorker' in navigator) {
+            window.addEventListener('load', function() {
+            navigator.serviceWorker.register('service-worker.js', {
+                scope: "/HAD_18/MyQuest/"
+            }).then(function(registration) {
+                // Registration was successful
+                console.log('ServiceWorker registration successful with scope: ', registration.scope);
+                // Trim the caches on load
+                navigator.serviceWorker.controller && navigator.serviceWorker.controller.postMessage({
+                    command: "trimCaches"
+                });
+            }).catch(function(err) {
+                // registration failed :(
+                console.log('ServiceWorker registration failed: ', err);
+            });
+            });
+            }
+      </script>
     <script src="js/init.js"></script>
     <script src="js/core.js"></script>
   </body>
