--- a/partialViews/homeScreen.html
+++ b/partialViews/homeScreen.html
@@ -3,7 +3,9 @@
     <div class="content-box-inner">
         <h1 class="center-align">Welcome to MyQuest</h1>
         <h2>The Orientation App</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <p>Welcome to your orientation for Teesside University. In this app, you will find all the information you need to get to
+          grips with your new surroundings. We recommend you start by logging in and setting up your Account, but otherwise you can dive
+          straight into Discover.
         </p>
         <button class="buttons-2 waves-effect waves-light accountButton" type="submit" name="action">Account</button>
         <button class="buttons-2 waves-effect waves-light startGame" type="submit" name="action">Discover</button>
